--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,23 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dnr2i.master.unicaen.fr.androidproject.HomeActivity">
+    tools:context="dnr2i.master.unicaen.fr.androidproject.HomeActivity"
+    android:background="@drawable/home_background">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="false"
         android:layout_centerInParent="true"
         android:layout_centerVertical="false"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <Button
             android:id="@+id/createAdBtn"
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/holo_blue_dark"
+            android:layout_marginBottom="20dp"
+            android:background="?android:attr/textColorHint"
             android:padding="10dp"
             android:text="@string/createAdBtn" />
 
@@ -29,8 +31,8 @@
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/holo_blue_dark"
+            android:layout_marginBottom="20dp"
+            android:background="?android:attr/textColorHint"
             android:padding="10dp"
             android:text="@string/randomAdBtn" />
 
@@ -39,8 +41,8 @@
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/holo_blue_dark"
+            android:layout_marginBottom="20dp"
+            android:background="?android:attr/textColorHint"
             android:elevation="0dp"
             android:padding="10dp"
             android:text="@string/adsListBtn" />
@@ -50,8 +52,8 @@
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/holo_blue_dark"
+            android:layout_marginBottom="20dp"
+            android:background="?android:attr/textColorHint"
             android:padding="10dp"
             android:text="@string/searchBtn" />
     </LinearLayout>
