--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@android:color/holo_blue_dark"
+            android:onClick="add"
             android:padding="10dp"
             android:text="@string/createAdBtn" />
 
