Home page design updated

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,6 +17,17 @@
         android:padding="20dp">
 
         <Button
+            android:id="@+id/searchBtn"
+            style="@android:style/Widget.Holo.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="?android:attr/textColorHint"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:padding="10dp"
+            android:text="@string/home_search_btn" />
+
+        <Button
             android:id="@+id/createAdBtn"
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
@@ -25,17 +36,7 @@
             android:background="?android:attr/textColorHint"
             android:onClick="add"
             android:padding="10dp"
-            android:text="@string/createAdBtn" />
-
-        <Button
-            android:id="@+id/randomAdBtn"
-            style="@android:style/Widget.Holo.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="?android:attr/textColorHint"
-            android:padding="10dp"
-            android:text="@string/randomAdBtn" />
+            android:text="@string/home_create_ad_btn" />
 
         <Button
             android:id="@+id/adsListBtn"
@@ -46,16 +47,18 @@
             android:background="?android:attr/textColorHint"
             android:elevation="0dp"
             android:padding="10dp"
-            android:text="@string/adsListBtn" />
+            android:text="@string/home_ads_list_btn" />
 
         <Button
-            android:id="@+id/searchBtn"
+            android:id="@+id/randomAdBtn"
             style="@android:style/Widget.Holo.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:background="?android:attr/textColorHint"
+            android:onClick="random"
             android:padding="10dp"
-            android:text="@string/searchBtn" />
+            android:text="@string/home_random_ad_btn" />
+
     </LinearLayout>
 </RelativeLayout>
