--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -6,32 +6,47 @@
     android:layout_height="match_parent"
     tools:context="dnr2i.master.unicaen.fr.androidproject.ViewActivity">
 
+    <TextView
+        android:id="@+id/viewTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_dark"
+        android:padding="10dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textColor="@android:color/background_light" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/viewTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+        <com.daimajia.slider.library.SliderLayout
+            android:id="@+id/slider"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            />
 
         <TextView
             android:id="@+id/viewDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/viewPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/viewPseudo"
             android:layout_width="match_parent"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
@@ -39,17 +54,20 @@
             android:id="@+id/viewEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/viewPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/viewCity"
             android:layout_width="match_parent"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
@@ -57,12 +75,16 @@
             android:id="@+id/viewPostcode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/viewDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="TextView" />
+
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
