--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -10,6 +10,8 @@
         android:id="@+id/ads"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:paddingBottom="20dp"
+        android:clipToPadding="false"/>
 
 </android.support.constraint.ConstraintLayout>
