add of search bar front + back

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,18 +14,37 @@
         android:layout_centerInParent="true"
         android:layout_centerVertical="false"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:id="@+id/linearLayout">
 
-        <Button
-            android:id="@+id/searchBtn"
-            style="@android:style/Widget.Holo.Button"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="?android:attr/textColorHint"
-            android:backgroundTint="@android:color/holo_blue_dark"
-            android:padding="10dp"
-            android:text="@string/home_search_btn" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/searchInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/linearLayout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:background="@color/cardview_light_background"
+                android:ems="10"
+                android:hint="Search..."
+                android:inputType="textPersonName"
+                android:padding="10dp" />
+
+            <Button
+                android:id="@+id/searchButton"
+                android:onClick="search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:text="Button" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/createAdBtn"
@@ -62,4 +81,5 @@
             android:text="@string/home_random_ad_btn" />
 
     </LinearLayout>
+
 </RelativeLayout>
