--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:padding="0dp"
-                android:text="Button" />
+                android:text="Chercher" />
         </LinearLayout>
 
         <Button
