--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,31 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dnr2i.master.unicaen.fr.androidproject.HomeActivity"
-    android:background="@drawable/home_background">
+    android:background="@drawable/home_background"
+    tools:context="dnr2i.master.unicaen.fr.androidproject.HomeActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="false"
         android:layout_centerInParent="true"
         android:layout_centerVertical="false"
         android:orientation="vertical"
-        android:padding="20dp"
-        android:id="@+id/linearLayout">
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/searchInput"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/linearLayout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/cardview_light_background"
                 android:ems="10"
@@ -36,14 +34,16 @@
                 android:inputType="textPersonName"
                 android:padding="10dp" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/searchButton"
-                android:onClick="search"
-                android:layout_width="wrap_content"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:background="?android:attr/textColorHint"
+                android:onClick="search"
                 android:padding="0dp"
-                android:text="Chercher" />
+                android:src="@drawable/search_icon" />
+
         </LinearLayout>
 
         <Button
