--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -6,85 +6,91 @@
     android:layout_height="match_parent"
     tools:context="dnr2i.master.unicaen.fr.androidproject.ViewActivity">
 
-    <TextView
-        android:id="@+id/viewTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:padding="10dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textColor="@android:color/background_light" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/viewTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_dark"
+            android:padding="10dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_light"
+            android:textSize="30sp" />
 
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
-            />
+            android:gravity="center" >
+
+        </com.daimajia.slider.library.SliderLayout>
 
         <TextView
             android:id="@+id/viewDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="20sp"
+            android:padding="10dp" />
 
         <TextView
-            android:id="@+id/viewPrice"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/viewPseudo"
-            android:layout_width="match_parent"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Contact : "
+            android:textSize="20sp"
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/viewEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="19sp"
+            android:paddingTop="5dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="40dp"/>
 
         <TextView
             android:id="@+id/viewPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="19sp"
+            android:paddingTop="5dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="40dp" />
 
         <TextView
-            android:id="@+id/viewCity"
+            android:id="@+id/viewCityPostcode"
             android:layout_width="match_parent"
-            android:textAlignment="center"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="20sp"
+            android:padding="10dp" />
 
         <TextView
-            android:id="@+id/viewPostcode"
+            android:id="@+id/viewDatePseudo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="16sp"
+            android:padding="10dp" />
 
-        <TextView
-            android:id="@+id/viewDate"
+        <Button
+            android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="TextView" />
-
+            android:onClick="call"
+            android:text="Button" />
 
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
