--- a/app/src/main/res/layout/item_ad_cards.xml
+++ b/app/src/main/res/layout/item_ad_cards.xml
@@ -15,43 +15,46 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="?android:selectableItemBackground"
-        android:padding="20dp">
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:scaleType="centerInside" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
-
-            <!--<ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            tools:src="@drawable/parisguidetower" />-->
 
             <TextView
                 android:id="@+id/adsListId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/adsListTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="#333"
-                android:textSize="18sp" />
+                android:layout_marginBottom="10dp"
+                android:text="TextView"
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/adsListPrice"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="0dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -62,13 +65,15 @@
                     android:id="@+id/adsListDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:text="TextView" />
 
                 <TextView
                     android:id="@+id/adsListCity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="TextView"
                     android:textAlignment="textEnd" />
 
             </LinearLayout>
