--- a/app/src/main/res/layout/activity_add_pref.xml
+++ b/app/src/main/res/layout/activity_add_pref.xml
@@ -21,11 +21,13 @@
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="30sp" />
+
         <LinearLayout
-            android:layout_width="556dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/addUsername"
@@ -37,9 +39,9 @@
                 android:id="@+id/addUsernameField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:padding="10dp" />
 
             <TextView
                 android:id="@+id/addEmailPrefLabel"
@@ -51,9 +53,9 @@
                 android:id="@+id/addEmailPrefField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
+
             <TextView
                 android:id="@+id/addTelPrefLabel"
                 android:layout_width="match_parent"
@@ -64,7 +66,6 @@
                 android:id="@+id/addTelPrefField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number" />
 
@@ -72,9 +73,13 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@android:color/holo_blue_dark"
                 android:onClick="submitPreferences"
-                android:text="Ok" />
+                android:text="Ok"
+                android:textColor="@android:color/background_light" />
+
         </LinearLayout>
 
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
