--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -48,10 +48,11 @@
                     <EditText
                         android:id="@+id/addTtitleField"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:inputType="textPersonName" />
+                        android:inputType="textPersonName"
+                        tools:ignore="NestedWeights" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -110,10 +111,11 @@
                     <EditText
                         android:id="@+id/addPseudoField"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:inputType="textPersonName" />
+                        android:inputType="textPersonName"
+                        tools:ignore="NestedWeights" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -159,10 +161,11 @@
                     <EditText
                         android:id="@+id/addCityField"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1"
                         android:ems="10"
-                        android:inputType="textPersonName" />
+                        android:inputType="textPersonName"
+                        tools:ignore="NestedWeights" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -206,9 +209,9 @@
             android:id="@+id/addSubmitButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:background="@android:color/holo_blue_dark"
             android:onClick="submit"
-            android:layout_margin="10dp"
             android:text="@string/add_submit_button"
             android:textColor="@android:color/background_light" />
 
