--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -12,7 +12,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -21,7 +21,6 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_blue_dark"
                 android:padding="10dp"
-                android:text="TextView"
                 android:textAlignment="center"
                 android:textColor="@android:color/background_light"
                 android:textSize="30sp" />
@@ -39,7 +38,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="TextView"
                 android:textSize="20sp" />
 
             <TextView
@@ -47,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="Contact : "
+                android:text="@string/viewContact"
                 android:textSize="20sp" />
 
             <TextView
@@ -58,7 +56,6 @@
                 android:paddingEnd="10dp"
                 android:paddingStart="40dp"
                 android:paddingTop="5dp"
-                android:text="TextView"
                 android:textSize="19sp" />
 
             <TextView
@@ -69,7 +66,6 @@
                 android:paddingEnd="10dp"
                 android:paddingStart="40dp"
                 android:paddingTop="5dp"
-                android:text="TextView"
                 android:textSize="19sp" />
 
             <TextView
@@ -77,7 +73,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="TextView"
                 android:textSize="20sp" />
 
             <TextView
@@ -85,7 +80,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="TextView"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -109,9 +103,9 @@
                     android:id="@+id/viewEmailButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_blue_dark"
                     android:onClick="email"
