--- a/app/src/main/res/layout/item_ad_cards.xml
+++ b/app/src/main/res/layout/item_ad_cards.xml
@@ -21,7 +21,7 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
             android:scaleType="centerInside" />
@@ -43,7 +43,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="TextView"
                 android:textColor="@android:color/holo_blue_dark"
                 android:textSize="20sp" />
 
@@ -53,8 +52,8 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:text="TextView"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:ignore="NestedWeights" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -65,15 +64,13 @@
                     android:id="@+id/adsListDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="TextView" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/adsListCity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="TextView"
                     android:textAlignment="textEnd" />
 
             </LinearLayout>
